# e1039-core

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  copy_rdict_pcm.sh  setup-e1039-core.sh
database/PHParameter/: CMakeLists.txt  PHParameters.cc  PHParameters.h
framework/ffaobjects/: CMakeLists.txt  EventHeader.h  FlagSave.h  FlagSavev1.cc  RunHeader.cc  RunHeader.h  SyncObject.cc  SyncObject.h
framework/fun4all/: CMakeLists.txt  Fun4AllDstOutputManager.cc  Fun4AllDstOutputManager.h  Fun4AllPrdfInputManager.cc  Fun4AllServer.cc  Fun4AllServer.h  SubsysReco.h
framework/phool/: CMakeLists.txt  PHFlag.cc  PHFlag.h  PHNodeIOManager.cc  PHNodeIOManager.h  PHTimeServer.h  PHTimer.h  PHTimer2.cc  PHTimer2.h  configure.ac  recoConsts.cc  recoConsts.h
fun4all/fun4all/: Fun4AllDstInputManager.cc  Makefile.am
generators/E906LegacyGen/: BeamlineObject.C  BeamlineObject.h  BeamlineObject_oct10.C  BeamlineObject_oct10.h  CMakeLists.txt  CMakeLists_hold_nov5.txt  CMakeLists_hold_oct29.txt  E1039PhysicsGen.C  E1039PhysicsGen.h  E1039PhysicsGenLinkDef.h  E906LegacyGen.C  E906LegacyGen.h  E906LegacyGenLinkDef.h  E906LegacyGenLinkDef_hold_nov5.h  E906LegacyGen_hold_Nov4.C  E906LegacyGen_oct10.C  E906LegacyGen_oct10.h  E906VertexGen.C  E906VertexGen.h  E906VertexGen_oct10.C  E906VertexGen_oct10.h  MCDimuon.C  MCDimuon.h  MCDimuonLinkDef.h  README  README.md  SQBeamlineObject.C  SQBeamlineObject.h  SQDimuonTruthInfoContainer.C  SQDimuonTruthInfoContainer.h  SQExternalGen.C  SQExternalGen.h  SQMCDimuon.C  SQMCDimuon.h  SQMCDimuonLinkDef.h  SQPileupGen.C  SQPileupGen.h  SQPrimaryGenLinkDef.h  SQPrimaryParticleGen.C  SQPrimaryParticleGen.h  (+2 more)
generators/E906LegacyVtxGen/: CMakeLists.txt  SQPrimaryVertexGen.C  SQPrimaryVertexGen.h  SQPrimaryVtxGenLinkDef.h
generators/JpsiGen/: CMakeLists.txt  JpsiNRQCDGen.cc  JpsiNRQCDGen.h  LinkDef.h
generators/PHPythia8/: CMakeLists.txt  Makefile.am  PHPy8ParticleTrigger.C  PHPy8ParticleTrigger.h  PHPythia8.C  PHPythia8.h
generators/phhepmc/: CMakeLists.txt  Fun4AllHepMCInputManager.cc  Makefile.am  PHHepMCGenHelper.cc  PHHepMCGenHelper.h
interface_main/: CMakeLists.txt  Makefile.am  SQCalHit_v1.cxx  SQCalHit_v1.h  SQCalHit_v1LinkDef.h  SQCalMCHit_v1.cxx  SQCalMCHit_v1.h  SQCalMCHit_v1LinkDef.h  SQDimuon.cxx  SQDimuon.h  SQDimuonLinkDef.h  SQDimuonVector.cxx  SQDimuonVector.h  SQDimuonVectorLinkDef.h  SQDimuonVector_v1.cxx  SQDimuonVector_v1.h  SQDimuonVector_v1LinkDef.h  SQDimuon_v1.cxx  SQDimuon_v1.h  SQDimuon_v1LinkDef.h  SQEvent.h  SQEvent_v1.cxx  SQEvent_v1.h  SQEvent_v1LinkDef.h  SQEvent_v2.cxx  SQEvent_v2.h  SQEvent_v2LinkDef.h  SQHardEvent.cxx  SQHardEvent.h  SQHardEventLinkDef.h  SQHardEvent_v1.cxx  SQHardEvent_v1.h  SQHardEvent_v1LinkDef.h  SQHardSpill.cxx  SQHardSpill.h  SQHardSpillLinkDef.h  SQHardSpill_v1.cxx  SQHardSpill_v1.h  SQHardSpill_v1LinkDef.h  SQHit.cxx  (+89 more)
ktracker/: CMakeLists.txt  README.md  rootlogon.C  setup.sh
ktracker/analysis_tools/: QAPlots.cxx  chamEfficiency.cxx  convertRTCurve.py  eventMerger.cxx  eventMixer.cxx  eventMixer.py  eventSelector.cxx  hodoAlign.cxx  hodoEfficiency.cxx  hodoEfficiency_plot.cxx  hodoTracking.cxx  makeRTProfile.cxx  propAlign.cxx  sample.cxx  sqlBakWriter.cxx  targetDump.cxx  trackMixer.cxx  triggerAna.cxx  triggerAna_online.cxx
ktracker/exe/: kFastTracking.cxx  kVertex.cxx
ktracker/inc/: DetectorConstruction.hh  FastTracklet.h  FastTrackletLinkDef.h  Field.hh  GenericSD.hh  GeomSvc.h  GlobalConsts.h  JobOptsSvc.h  KalmanFastTracking.h  KalmanFilter.h  MCHit.hh  MySQLSvc.h  RTCurveFitter.h  SMillepede.h  SMillepedeUtil.h  SMillepedeUtilLinkDef.h  Settings.hh  TPhysicsList.hh  TabulatedField3D.hh  TrackExtrapolator.hh  TriggerAnalyzer.h  VertexFit.h
ktracker/opts/: default.opts  mc.opts
ktracker/scripts/: compile
ktracker/src/: DetectorConstruction.cc  FastTracklet.cxx  Field.cc  GenericSD.cc  GeomSvc.cxx  JobOptsSvc.cxx  KalmanFastTracking.cxx  KalmanFilter.cxx  KalmanFitter.cxx  KalmanTrack.cxx  KalmanUtil.cxx  MySQLSvc.cxx  SMillepede.cxx  SMillepedeUtil.cxx  Settings.cc  TPhysicsList.cc  TabulatedField3D.cc  TrackExtrapolator.cc  TriggerAnalyzer.cxx  TriggerRoad.cxx  VertexFit.cxx  millepede.f
online/chan_map/: CMakeLists.txt  CalibParamInTimeTaiwan.cc  CalibParamInTimeTaiwan.h  CalibParamInTimeV1495.cc  CalibParamInTimeV1495.h  CalibParamXT.cc  CalibParamXT.h  ChanMapScaler.cc  ChanMapScaler.h  ChanMapTaiwan.cc  ChanMapTaiwan.h  ChanMapV1495.cc  ChanMapV1495.h  ChanMapper.cc  ChanMapper.h  ChanMapperRange.cc  ChanMapperRange.h  ChanMapperScaler.cc  ChanMapperScaler.h  ChanMapperTaiwan.cc  ChanMapperTaiwan.h  ChanMapperV1495.cc  ChanMapperV1495.h  DbSvc.cc  DbSvc.h  GeomParamPlane.h  LinkDef.h  ParamRunRange.cc  ParamRunRange.h  RunParamBase.cc  RunParamBase.h
online/decoder_maindaq/: AnaMainDaq.cc  AnaMainDaq.h  AnaMainDaqLinkDef.h  CMakeLists.txt  CalibEvtQual.cc  CalibEvtQual.h  CalibEvtQualLinkDef.h  CalibInTime.cc  CalibInTime.h  CalibInTimeLinkDef.h  CalibMergeH4.cc  CalibMergeH4.h  CalibMergeH4LinkDef.h  CalibXT.cc  CalibXT.h  CalibXTLinkDef.h  CodaInputManager.cc  CodaInputManager.h  DbUpRun.cc  DbUpRun.h  DbUpRunLinkDef.h  DbUpSpill.cc  DbUpSpill.h  DbUpSpillLinkDef.h  DecoData.cc  DecoData.h  DecoError.cc  DecoError.h  DecoParam.cc  DecoParam.h  DecoStatusDb.cc  DecoStatusDb.h  DecoStatusDbLinkDef.h  Fun4AllEVIOInputManager.cc  Fun4AllEVIOInputManager.h  Fun4AllEVIOInputManagerLinkDef.h  Fun4AllSpillDstOutputManager.cc  Fun4AllSpillDstOutputManager.h  Fun4AllSpillDstOutputManagerLinkDef.h  Fun4AllTriggerDstOutputManager.cc  (+20 more)
online/event/: CMakeLists.txt  EVIO_Event.cxx  EVIO_Event.h  Event.cxx  Event.h
online/onlmonserver/: 1  @  AnaWait.cc  AnaWait.h  CMakeLists.txt  HistoServer.cc  HistoServer.h  LinkDef.h  OnlMonCanvas.cc  OnlMonCanvas.h  OnlMonCham.cc  OnlMonCham.h  OnlMonClient.cc  OnlMonClient.h  OnlMonClientLinkDef.h  OnlMonComm.cc  OnlMonComm.h  OnlMonH4.cc  OnlMonH4.h  OnlMonHodo.cc  OnlMonHodo.h  OnlMonHodoV1495.cc.bkp  OnlMonMainDaq.cc  OnlMonMainDaq.h  OnlMonMainDaqLinkDef.h  OnlMonParam.cc  OnlMonParam.h  OnlMonProp.cc  OnlMonProp.h  (+28 more)
(+2812 files in other folders)
